force-app/main/default/objects/Position_Approval_Routing__c/Position_Approval_Routing__c.object-meta.xml
<CustomObject>
    <label>Position Approval Routing</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Routing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Approval Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>