force-app/main/default/objects/Position_Approval_Routing__c/fields/Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver #1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Position_Approval_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>