force-app/main/default/objects/Position_Approval_Routing__c/fields/Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver #2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Position_Approval_Routings1</relationshipName>
    <type>Lookup</type>
</CustomField>