force-app/main/default/objects/Position_Approval_Routing__c/fields/Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver #3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Position_Approval_Routings2</relationshipName>
    <type>Lookup</type>
</CustomField>